--- a/src/app/components/profession-searcher/profession-searcher.component.html
+++ b/src/app/components/profession-searcher/profession-searcher.component.html
@@ -29,6 +29,9 @@
             <li *ngIf="profession.additionalTasks">
               {{profession.additionalTasks}}
             </li>
+            <li>
+              <a target="_blank" [routerLink]="['/statystyki/', profession.code]"> Kliknij tutaj, aby zobaczyć informacje nt. zarobków i struktury zatrudnienia w tej grupie zawodowej </a>
+            </li>
           </ul>
         </ng-template>
       </mat-expansion-panel>
@@ -41,7 +44,7 @@
     </mat-paginator>
   </div>
   <div  class="results" *ngIf="!professions">
-    Oczekiwanie...
+    <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
   </div>
   <div  class="results" *ngIf="professions && professions.length === 0">
     Lista zawodów pusta.
