--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -3,7 +3,7 @@
     {{errMess}}
   </div>
   <div class="alert alert-success" *ngIf="success">
-    {{messege}}
+    {{messege}} Zmiany na profilu będą widoczne po ponownym zalogowaniu
   </div>
   <h3 id="name">
     {{ user.username }}
@@ -30,5 +30,5 @@
 </div>
 
 <ng-template #loggedOut>
-  Please login.
+  Zaloguj się, żeby zobaczyć zawartość
 </ng-template>
