--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 a, a:visited, a:hover {
-  font-weight: normal;
+  font-weight: 600;
   color: black;
   text-decoration: none;
 }
@@ -44,6 +44,7 @@ a, a:visited, a:hover {
 }
 
 .link {
+  cursor: pointer;
   text-decoration: none;
   color: black;
   font-weight: normal;
@@ -51,31 +52,32 @@ a, a:visited, a:hover {
   position: relative;
   padding: 10px;
 }
+.link:hover {
+  font-weight: normal;
+}
 .link:before, .link:after{
-  color: white;
   content: '';
   position: absolute;
   width: 1px;
   height: 1px;
   transition: all 0.3s ease;
 }
-
-.link:before{
-  top: -2.5%;
-  left: -1%;
-  border-top: 2px solid black;
-  border-left: 2px solid black;
-}
-.link:after{
-  bottom: -2.5%;
-  right: -1%;
-  border-bottom: 2px solid black;
-  border-right: 2px solid black;
-}
 .link:hover:before, .link:hover:after{
   width: 102%;
   height: 102%;
   transition: all 0.3s ease;
+}
+.link:hover:before{
+  top: -2.5%;
+  left: -1%;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+}
+.link:hover:after{
+  bottom: -2.5%;
+  right: -1%;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
 }
 
 .register {
@@ -83,7 +85,6 @@ a, a:visited, a:hover {
   margin: 1% .5% 1% 1%;
   clip-path: inset(0 round 1em);
   border: none;
-  font-weight: bold;
   text-decoration: none;
   cursor: pointer;
 
@@ -98,7 +99,6 @@ a, a:visited, a:hover {
   padding: 1%;
   clip-path: inset(0 round 1em);
   border: none;
-  font-weight: bold;
   text-decoration: none;
   cursor: pointer;
 
@@ -110,7 +110,6 @@ a, a:visited, a:hover {
 }
 
 #accountNav {
-  font-weight: bold;
   margin: .1%;
   width: auto;
   min-width: 8em;
@@ -123,7 +122,6 @@ a, a:visited, a:hover {
 }
 
 #profile {
-  font-weight: bold;
   padding-left: .5em;
   padding-right: .5em;
   height: 2.5em;
@@ -137,7 +135,6 @@ a, a:visited, a:hover {
 }
 
 #logout {
-  font-weight: bold;
   clip-path: inset(0 round 1em);
   border: none;
   background: #faabab; /* Old browsers */
