--- a/src/app/components/board-user/board-user.component.css
+++ b/src/app/components/board-user/board-user.component.css
@@ -5,8 +5,39 @@
 .mat-expansion-panel {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  background: lightgoldenrodyellow;
-  padding: 2% 0 2% .5%;
+  padding: 1% 0 1% .5%;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
   margin: 1% 0 0 0;
+}
+
+.results {
+  color: black;
+  margin-top: 1%;
+  clip-path: inset(0 round 1em);
+  padding: .5em;
+
+  background: #36e1f1; /* Old browsers */
+  background: -moz-linear-gradient(left, #89b0ff 0%, #47c2c2 99%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #89b0ff 0%, #47c2c2 99%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #89b0ff 0%, #47c2c2 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#89b0ff', endColorstr='#47c2c2',GradientType=1 ); /* IE6-9 */
+
+}
+
+.copy {
+  float: right;
+  color: black;
+  margin-top: 1%;
+  clip-path: inset(0 round 1em);
+  padding: .5em;
+
+  background: #d23dfc; /* Old browsers */
+  background: -moz-linear-gradient(left, #d23dfc 0%, #c25cfa 99%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left,  #d23dfc 0%, #c25cfa 99%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #d23dfc 0%, #c25cfa 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d23dfc', endColorstr='#c25cfa',GradientType=1 ); /* IE6-9 */
+
+}
+
+.inner {
 }
