--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -137,10 +137,31 @@ ngx-loading backdrop {
 .mat-expansion-panel {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  background: lightgoldenrodyellow;
-  padding: 2% 0 2% .5%;
+  padding: 1% 0 1% .5%;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
   margin: 1% 0 0 0;
+}
+
+ul {
+  margin-top: 1em;
+  columns: 2;
+  list-style-type: none;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+li {
+  flex: 0 0 15%;
+  border: 1px solid black;
+  background: rgba(100, 255, 0, .1);
+  padding: .5em 1em;
+  display: flex;
+  align-items: flex-start;
+}
+
+.li-value {
+  flex: 0 0 85%;
 }
 
 a,
