--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -61,6 +61,6 @@
   </form>
   <div class="alert alert-success" *ngIf="isSuccessful">
     {{ message }} <br />
-    Teraz możesz się zalogować.
+    Możesz się się teraz zalogować.
   </div>
 </div>
