--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,21 +1,35 @@
 <div class="main">
   <div class="slogan">
-    <h1>
+    <h2>
       Rozwiąż Quiz i odkryj swoje możliwości!
-    </h1>
+    </h2>
   </div>
   <div class="quizButton">
     <input type="button" class="button" [routerLink]="'quiz'"  value="Rozpocznij Quiz" />
   </div>
   <div class="content">
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin lorem sed augue commodo auctor. Duis condimentum non odio dapibus maximus. Ut iaculis, odio vel porta euismod, dui turpis posuere dui, vel convallis metus massa non tellus. Duis tincidunt posuere mi non finibus. Pellentesque bibendum orci ut ligula vestibulum, sed porta felis aliquet. Nunc dignissim dapibus felis a iaculis. Maecenas nisi risus, venenatis vel placerat sed, elementum non odio. Suspendisse nec aliquam felis, eu ultrices lorem. Etiam a egestas quam. Nullam et convallis metus, gravida interdum magna. Phasellus elementum, elit ut interdum interdum, justo mi vehicula sem, ac semper tortor risus a est. Cras eget dolor vitae neque vehicula aliquet. Ut malesuada, lacus vitae tincidunt cursus, ante diam varius augue, sit amet tristique enim nisi id nunc.
+      Tiara przydziału to aplikacja doradztwa zawodowego dla osób wchodzących na rynek pracy, w szczególności
+      uczniów szkół średnich i podstawowych. Nie wiesz co chciałbyś robić w przyszłości? Ta aplikacja jest dla Ciebie!
+      <br/>
+      Dzięki naszej aplikacji możesz zapoznać się z blisko 500 ścieżkami kariery, zawierającymi ok. 2500 zawodów!
     </p>
+    <blockquote class="blockquote"> Jak to działa? </blockquote>
     <p>
-      Aliquam finibus, lectus ut ornare facilisis, urna risus accumsan ex, sed euismod tortor sapien consectetur est. Curabitur molestie, est non sollicitudin placerat, neque eros consectetur ipsum, nec scelerisque lectus quam vel orci. Sed ultrices lacus velit. Nullam molestie mi augue, in congue lectus gravida a. Suspendisse potenti. Duis nec imperdiet turpis, id venenatis purus. Proin vitae commodo tortor.
+      Na podstawie odpowiedzi użytkownika na wcześniej zadane pytania nasz algorytm selekcjonuje grupy zawodowe
+      zawarte w Klasyfikacji Zawodów i Specjalności prowadzonej przez Ministerstwo Rozwoju, Pracy i Technologii.
     </p>
+    <blockquote class="blockquote"> Ale to nie wszystko! </blockquote>
     <p>
-      Sed lacinia ac justo non pretium. Fusce metus lorem, ultrices sed gravida sit amet, cursus in odio. Donec aliquet lacinia quam et accumsan. Nunc feugiat suscipit est. Suspendisse pulvinar egestas lacus at elementum. Vestibulum tincidunt, libero eu porttitor ultricies, quam tortor mattis nisi, et blandit magna turpis vitae leo. Cras ac enim vel quam iaculis sodales quis sed mauris.
+      Po rozwiązaniu quizu możesz zapoznać się z listą zawodów wyselekcjonowanych dla Ciebie, zapoznać się ze
+      średnimi zarobkami, a także udziału zawodu w rynku. Informacje pochodzą z Głównego Urzędu Statystycznego. <br/>
+      Chciałbyś zapoznać się z informacjami nt. konkretnego zawodu bez przechodzenia przez quiz? Skorzystaj z
+      jednej z wyszukiwarek dostępnych w górnej cześci strony. Znajdziesz tam jeszcze więcej informacji nt. wymarzonego
+      zawodu. <br/>
+      Jeżeli masz taką potrzebę możesz zapisać wyniki swojego quizu na później. W tym celu zaloguj się
+      i przejdź do zakładki "Historia quizów". Znajdziesz tam wszystkie swoje podejścia wraz z listą kroków, wynikami,
+      a także linkiem do udostępnienia quizu znajomym nieposiadającym konta. <br/>
+      Sprawdź sam co jeszcze ma dla Ciebie do zaoferowania Tiara Przydziału!
     </p>
   </div>
 </div>
