--- a/src/app/components/profession-searcher/profession-searcher.component.css
+++ b/src/app/components/profession-searcher/profession-searcher.component.css
@@ -19,6 +19,36 @@
   width: 50%;
 }
 
+/*#phrase {*/
+/*  width: 50%;*/
+/*  background: none;*/
+/*  border: black solid 1px;*/
+/*}*/
+
+/*button {*/
+/*  border: black solid 1px;*/
+/*  padding: .4em 1.5em;*/
+/*  background: none;*/
+/*  clip-path: inset(0 round .3em);*/
+/*  border-radius: .3em;*/
+/*}*/
+/*button:hover{*/
+/*  background: rgba(253, 253, 133,.7);*/
+/*}*/
+
+/*button {*/
+/*  text-align: center;*/
+/*  background: #59caff;*/
+/*  padding: .5em 1.5em;*/
+/*  clip-path: inset(0 round 2em);*/
+/*  border: none;*/
+/*}*/
+
+/*button:hover {*/
+/*  background: #0099ff;*/
+/*}*/
+
+
 ul {
   margin-top: 1em;
   columns: 2;
@@ -39,4 +69,35 @@ li {
 
 .li-value {
   flex: 0 0 85%;
+}
+
+
+::ng-deep .cdk-overlay-container,
+::ng-deep .cdk-global-overlay-wrapper {
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+::ng-deep .cdk-overlay-container {
+  position: fixed;
+  z-index: 1000;
+}
+
+::ng-deep .cdk-overlay-pane {
+  background-color: #c4deff;
+  border: 1px solid rgba(128, 128, 128);
+  position: absolute;
+  pointer-events: auto;
+  box-sizing: border-box;
+  z-index: 1000;
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+::ng-deep mat-tooltip-component {
+  display: none;
 }
