--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -176,6 +176,36 @@ a:hover {
 }
 
 
+::ng-deep .cdk-overlay-container,
+::ng-deep .cdk-global-overlay-wrapper {
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+::ng-deep .cdk-overlay-container {
+  position: fixed;
+  z-index: 1000;
+}
+
+::ng-deep .cdk-overlay-pane {
+  background-color: #c4deff;
+  border: 1px solid rgba(128, 128, 128);
+  position: absolute;
+  pointer-events: auto;
+  box-sizing: border-box;
+  z-index: 1000;
+  display: flex;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+::ng-deep mat-tooltip-component {
+  display: none;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
 }
