ramka na mobilce do fixniecia przy logoresponsive ktore ma: logo i napis tiara przydzialu

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
 h1{
   line-height: .8;
@@ -6,6 +7,54 @@ h1{
 
 .toolbarresponsive h1 {
   margin: 0;
+}
+
+.logoResponsive {
+  height: 64px;
+  color: black;
+  cursor: pointer;
+  text-decoration: none;
+  position: relative;
+  padding: 10px;
+}
+
+.logoresponsive:hover {
+  font-weight: normal;
+}
+
+.logoresponsive:before, .logoresponsive:after{
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  transition: all 0.3s ease;
+}
+.logoresponsive:hover:before, .logoresponsive:hover:after{
+  width: 102%;
+  height: 102%;
+  transition: all 0.3s ease;
+}
+.logoresponsive:hover:before{
+  top: -2.5%;
+  left: -1%;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+}
+
+.logoresponsive:hover:after{
+  bottom: -2.5%;
+  right: -1%;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.logoResponsive img {
+  float: left;
+}
+
+.logoResponsive h1 {
+  float: left;
+  font-size: 64px;
 }
 
 .toolbarresponsive {
@@ -56,6 +105,8 @@ h1{
   display: none;
 }
 
+
+
 .toolbar {
   position: fixed;
   z-index: 9999;
@@ -80,7 +131,8 @@ h1{
 
   .toolbar span { display: none}
 
-  .toolbar a.icon{ display: block}
+  .toolbar a.icon{ display: block;
+  margin-right: 10px}
 }
 
 h1 {
@@ -129,12 +181,31 @@ a, a:visited, a:hover {
   transition: all 0.3s ease;
 }
 .link:hover:before{
+   top: -2.5%;
+   left: -1%;
+   border-top: 1px solid black;
+   border-left: 1px solid black;
+ }
+.link:hover:after{
+  bottom: -2.5%;
+  right: -1%;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.toolbarresponsive a:hover:before, a:hover:after{
+  width: 102%;
+  height: 102%;
+  transition: all 0.3s ease;
+}
+
+.toolbarresponsive a:hover:before{
   top: -2.5%;
   left: -1%;
   border-top: 1px solid black;
   border-left: 1px solid black;
 }
-.link:hover:after{
+.toolbarresponsive a:hover:after{
   bottom: -2.5%;
   right: -1%;
   border-bottom: 1px solid black;
