--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
   <a routerLink="/" routerLinkActive="active">
     <img alt="Logo" src="favicon.ico" ng-href="#" />
   </a>
-  <a routerLink="/" (click)="myFunction()">
+  <a routerLink="/" *ngIf="!toolbarResponsive">
     <h1>Tiara Przydziału</h1>
+  </a>
+  <a class="logoResponsive" *ngIf="toolbarResponsive" routerLink="/">
+    <img alt="Logo" src="favicon.ico" ng-href="#" /> <h1>Tiara Przydziału</h1>
   </a>
   <div class="placeholder"> </div>
   <span class="search" routerLink="/wyszukaj/grupy">
@@ -17,8 +20,8 @@
   <span class="search" *ngIf="isLoggedIn" class="search" routerLink="/historia">
     <a class="link">Zapisane quizy</a>
   </span>
-  <a href="/zarejestruj" class="register" *ngIf="!isLoggedIn" routerLink="zarejestruj">Zarejestruj się</a>
-  <a href="/zaloguj" class="login" routerLink="zaloguj" *ngIf="!isLoggedIn">Zaloguj się</a>
+  <a href="/zarejestruj" [className]="registerVariable" *ngIf="!isLoggedIn" routerLink="zarejestruj">Zarejestruj się</a>
+  <a href="/zaloguj" [className]="loginVariable" routerLink="zaloguj" *ngIf="!isLoggedIn">Zaloguj się</a>
 
   <ul class="navbar-nav ml-auto" id="accountNav" *ngIf="isLoggedIn">
     <li class="nav-item">
