--- a/src/app/components/profession-searcher/profession-searcher.component.css
+++ b/src/app/components/profession-searcher/profession-searcher.component.css
@@ -19,6 +19,27 @@
   width: 50%;
 }
 
+
+.links {
+  float: right;
+  margin: 1em 0 .5em 3em;
+  text-decoration: none;
+  background: rgba(255, 255, 0, 0.4);
+  color: black;
+  padding: .5em 1em .5em 1em;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
+
+.links:active {
+  border-top: 1px solid #333333;
+  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #333333;
+}
+
 /*#phrase {*/
 /*  width: 50%;*/
 /*  background: none;*/
