--- a/src/app/components/profession-searcher/profession-searcher.component.html
+++ b/src/app/components/profession-searcher/profession-searcher.component.html
@@ -16,6 +16,7 @@
           {{profession.name}}
         </mat-expansion-panel-header>
         <ng-template matExpansionPanelContent>
+          <a class="links" target="_blank" [routerLink]="['/statystyki/', profession.code]"> Kliknij tutaj, aby zobaczyć informacje nt. zarobków i struktury zatrudnienia w tej grupie zawodowej </a>
           <ul>
             <li>
               Kod zawodu
@@ -42,7 +43,6 @@
               {{profession.additionalTasks}}
             </li>
           </ul>
-          <a target="_blank" [routerLink]="['/statystyki/', profession.code]"> Kliknij tutaj, aby zobaczyć informacje nt. zarobków i struktury zatrudnienia w tej grupie zawodowej </a>
         </ng-template>
       </mat-expansion-panel>
     </div>
