--- a/src/app/components/quiz-details/quizDetails.component.css
+++ b/src/app/components/quiz-details/quizDetails.component.css
@@ -164,15 +164,24 @@ li {
   flex: 0 0 85%;
 }
 
-a,
-a:visited,
-a:hover {
-  color: #1976d2;
+.links {
+  float: right;
+  margin: 0 0 1em 3em;
   text-decoration: none;
+  background: rgba(255, 255, 0, 0.4);
+  color: black;
+  padding: .5em 1em .5em 1em;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
 }
 
-a:hover {
-  color: #125699;
+.links:active {
+  border-top: 1px solid #333333;
+  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #333333;
 }
 
 
