--- a/src/app/components/quiz-details/quizDetails.component.html
+++ b/src/app/components/quiz-details/quizDetails.component.html
@@ -65,11 +65,9 @@
               {{result.tasks}}
             </li>
           </ul>
-          <div>
-            <a target="_blank" [routerLink]="['/wyszukaj/zawody/', result.code]"> Kliknij tutaj, aby zobaczyć listę dostepnych zawodów (w nowej karcie) </a>
-          </div>
-          <div>
-            <a target="_blank" [routerLink]="['/statystyki/', result.code]"> Kliknij tutaj, aby zobaczyć informacje nt. zarobków i struktury zatrudnienia w tej grupie zawodowej </a>
+          <div class="buttons">
+            <a class="links" target="_blank" [routerLink]="['../zawody/', result.code]"> Lista dostepnych zawodów (w nowej karcie) </a>
+            <a class="links" target="_blank" [routerLink]="['/statystyki/', result.code]"> Zarobki i struktura zatrudnienia (w nowej karcie) </a>
           </div>
         </ng-template>
       </mat-expansion-panel>
